--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <html lang="en">
 
 <head>
-    <title>MMTM</title>
-    <script src="index.js" defer></script>
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>MMTM</title>
+  <script src="index.js" defer></script>
+  <style>
+      body {
+          font-family: sans-serif;
+      }
+  </style>
 </head>
 
 <body>
