--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
           font-family: sans-serif;
       }
   </style>
+
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/modern-css-reset/dist/reset.min.css"
+        integrity="sha384-rCvl++5jppxDyN8NigsVGLX/CRx1NZiKkgIn+PBJfFpIP8xPB77hWVxS7/JGxs62"
+        crossorigin="anonymous" />
 </head>
 
 <body>
