--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>MMTM</title>
+  <title>MEMENTO MORI</title>
   <script src="index.js" defer></script>
   <style>
       body {
